# superagentx

./: .env-example  .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
.github/workflows/: pylint.yml
agentx/: constants.py  exceptions.py  prompt.py
agentx/agent/: __init__.py  agent.py  engine.py  result.py
agentx/embeddings/: __init__.py  base.py  openai.py
agentx/handler/: base.py
agentx/io/: __init__.py  base.py  console.py
agentx/llm/: __init__.py  bedrock.py  client.py  constants.py  models.py  openai.py
agentx/memory/: __init__.py  base.py  config.py  setup.py  storage.py
agentx/pipe/: __init__.py
agentx/pipeimpl/: iopipe.py
agentx/tool/: base.py  exceptions.py
agentx/utils/: embed_config.py  helper.py  llm_config.py
agentx/vector_stores/: __init__.py  base.py  chroma.py  neo4j.py  opensearch.py
agentx/visualization/: __init__.py
docs/: agent.mdx  conversation.mdx  engine.mdx  engines.mdx  handler.mdx  human_approval.mdx  installation.mdx  introduction.mdx  io-console.mdx  llm.mdx  mcp.mdx  memory.mdx  mint.json  pipe.mdx  prompt.mdx  quickstart.mdx  restapi.mdx  storage.mdx  voice_pipe.mdx  websocket.mdx
docs/examples/: how_to.mdx
docs/examples-reference/: introduction.mdx
examples/: ecom_iopipe.py  ecom_wspipe.py  ecom_wspipe_cli.py
examples/agents/: ai_agent.py  ai_task.py  fraud_agent.py  greetings_agent.py  mixed_agents.py  parallel_agents.py  router_test.py  test_greetings.py
examples/browser/: entra.py  simple.py  taiga.py
examples/ecommerce_data_generator/: __init__.py  fake_products.py
superagentx/: agent.py  agentxpipe.py  base.py  base_engine.py  browser_engine.py  config.py  constants.py  engine.py  exceptions.py  prompt.py  result.py  task_engine.py
superagentx/agent/: agent.py  engine.py  result.py
superagentx/channels/: base.py  console_channel.py  slack_channel.py  teams_channel.py
superagentx/computer_use/: constants.py  utils.py
superagentx/db_store/: __init__.py  agent_manager.py  db_interface.py  db_storage.py  sql_status_enum.py
superagentx/handler/: __init__.py  ai.py  base.py  browser.py  csv_data.py  decorators.py  elastic_search.py  email.py  exa_search.py  exceptions.py  financial_data.py  mcp.py  openapi.py  scrape.py  send_email.py  serper_dev.py  sql.py  weather.py  wikipedia.py
superagentx/io/: __init__.py  base.py  console.py
superagentx/llm/: __init__.py  anthropic.py  bedrock.py  client.py  constants.py  gemini.py  litellm.py  models.py  ollama.py  openai.py  utils.py
superagentx/memory/: __init__.py  base.py  config.py  storage.py
superagentx/pipe/: __init__.py
superagentx/pipeimpl/: awsvoicepipe.py  base.py  iopipe.py  openaivoicepipe.py  wspipe.py
superagentx/policy_engine/: core.py  crypto.py  entities.json  main.py  policies.cedar
superagentx/router/: router_engine.py
superagentx/utils/: console_color.py  helper.py  llm_config.py  models.py
superagentx/vector_stores/: __init__.py  base.py  chroma.py  opensearch.py
superagentx/visualization/: __init__.py  exceptions.py
superagentx_cli/: cli.py  cli_app.py  generator.py  main.py
superagentx_cli/templates/: README.md.jinja2  app_pipe.py.jinja2  deployment.sh.jinja2  iopipe.py.jinja2  pipe.py.jinja2  pyproject.toml.jinja2  restpipe.py.jinja2  supervisor.conf.jinja2  wspipe.py.jinja2
superagentx_examples/: ecom_iopipe.py  ecom_wspipe_cli.py
tests/: __init__.py  cli_app.json  cli_app.py  test.py  test_aws_s3.py  test_content_creater.py  test_email_handler.py  test_exa_handler.py  test_githib_handler.py  test_jira_handler.py  test_oper_over.py  test_sql_handler.py  test_visualization.py  test_visualization_async.py  test_weather_handler.py  test_wikipedia.py
tests/agent/: cricket_tweet.py  test_agent.py  test_ai_content_agent.py  test_atlassian_agent.py  test_content_generation_agent.py  test_email_agent.py  test_gdocs.py  test_gmail_agent.py  test_hubspot_agent.py  test_jira_agent.py  test_mcp_handler_agent.py  test_mcp_reddit_agent.py  test_mcp_sse_weather_agent.py  test_serper_agent.py  test_target_agent.py  test_walmart_agent.py  test_weather_agent.py  test_wikipedia_agent.py
tests/browser/: cricket_tweet.py  everest_masala.py  sensitive_data.py  test_browser.py  test_check_appointment.py  test_everest_masala.py  test_gdocs.py
tests/conversation/: test_conversation_agent.py  test_conversation_pipe.py
tests/embeddings/: test_embeddings_openai.py
tests/handlers/: test_amazon.py  test_atlassian_handler.py  test_aws_ec2.py  test_aws_s3.py  test_bedrock_ai_handler.py  test_calender_handler.py  test_content_creater.py  test_content_creator.py  test_content_creator_async.py  test_csv_handler.py  test_elastic_search.py  test_email_handler.py  test_exa_handler.py  test_fake_product.py  test_fake_products.py  test_financial_data.py  test_flipkart.py  test_gmail_handler.py  test_hub_spot_handler.py  test_jira_handler.py  test_mcp_handler.py  test_openapi_spec_handler.py  test_scrap_handler.py  test_serper_dev.py  test_serply_job.py  test_sql_handler.py  test_sql_handler_async.py  test_target_handler.py  test_visualization.py  test_visualization_async.py  test_walmart_handler.py  test_weather_handler.py  test_weather_handler_async.py  test_wikipedia.py  test_wikipedia_async.py
tests/human/: main.py  state.py
tests/io/: test_console_io_stream.py
tests/llm/: test_anthropic_client.py  test_bedrock_client.py  test_bedrock_client_raw.py  test_tool.py  (+5 more)
(+259 files in other folders)
