[tool.poetry]
name = "superagentx"
version = "0.1.14"
description = "The Ultimate Modular Autonomous Multi AI Agent Framework."
license = "MIT"
authors = [
    "SuperAgentX AI <support@superagentx.ai>",
]
maintainers = [
    "SuperAgentX AI <support@superagentx.ai>",
]
readme = "README.md"
homepage = "https://www.superagentx.ai/"
repository = "https://github.com/superagentxai/superagentx"
documentation = "https://docs.superagentx.ai/"
keywords = ["superagentX", "AGI", "Agentic AI", "ASI", "superagentx", "agent", "LLM", "cli"]
packages = [
    { include = "superagentx" },
    { include = "superagentx_cli" }
]

[tool.poetry.scripts]
superagentx-cli = "superagentx_cli.main:app"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
pydantic = "^2.8.2"
boto3 = "^1.35.8"
bokeh = "^3.5.2"
openai = "^1.47.1"
exa-py = "^1.1.4"
neo4j = "^5.24.0"
chromadb = "^0.5.5"
opensearch-py = "^2.7.1"
elasticsearch = "^8.15.1"
aiohttp = "^3.10.8"
rich = "^13.9.2"
protobuf = "3.20.3"
aiosqlite = "^0.20.0"
typer = { version = "^0.13.0", optional = true }
jinja2 = { version = "^3.1.4", optional = true }
websockets = "^13.1"
amazon-transcribe = "^0.6.2"
scipy = "^1.15.1"
numpy = "^2.2.1"
aiofiles = "^24.1.0"
ollama = "^0.4.7"

[tool.poetry.extras]
cli = ["jinja2", "typer", "rich"]

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"