[project]
name = "superagentx"
version = "0.1.16"
description = "The Ultimate Modular Autonomous Multi AI Agent Framework."
license = { text = "MIT" }
authors = [
    { name = "SuperAgentX AI", email = "<support@superagentx.ai>"},
]
maintainers = [
    { name = "SuperAgentX AI", email = "<support@superagentx.ai>"},
]
readme = "README.md"

keywords = ["superagentX", "AGI", "Agentic AI", "ASI", "superagentx", "agent", "LLM", "cli"]
requires-python = ">=3.10,<=3.13"

dependencies = [
    "pydantic>=2.8.2",
    "boto3>=1.35.8",
    "bokeh>=3.5.2",
    "openai>=1.47.1",
    "exa-py>=1.1.4",
    "neo4j>=5.24.0",
    "chromadb>=0.5.5",
    "opensearch-py>=2.7.1",
    "elasticsearch>=8.15.1",
    "aiohttp>=3.10.8",
    "rich>=13.9.2",
    "protobuf>=3.20.3",
    "aiosqlite>=0.20.0",
    "websockets>=13.1",
    "amazon-transcribe>=0.6.2",
    "scipy>=1.15.1",
    "numpy>=2.2.1",
    "aiofiles>=24.1.0",
    "ollama>=0.4.7",
    "camel-converter>=4.0.1",
    "yapf (>=0.43.0,<0.44.0)",
    "anthropic (>=0.47.2,<0.48.0)",
    "fastembed (>=0.6.0,<0.7.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[project.urls]
homepage = "https://www.superagentx.ai/"
repository = "https://github.com/superagentxai/superagentx"
documentation = "https://docs.superagentx.ai/"

[project.scripts]
superagentx-cli = "superagentx_cli.main:app"
superagentx-app = "superagentx_cli.cli_app:app"

[project.optional-dependencies]
cli = [ "jinja2>=3.1.4", "typer>=0.13.0", "rich>=13.9.2", "yapf>=0.43.0" ]

[tool.poetry]
packages = [
    { include = "superagentx" },
    { include = "superagentx_cli" }
]

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
